# capnproto-serialize-deserialize

./: CMakeLists.txt  README.md  deserialize.cpp  person.capnp  serialize.cpp
